crawlers/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mercados-entrypoint
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: mercados
  ports:
    - protocol: TCP
      port: 80
      name: frontend
      targetPort: frontend
    - protocol: TCP
      port: 8080
      name: backend
      targetPort: backend
